# Project-Collab

./: README.md  package-lock.json
.github/workflows/: release-pr.yml
flask-backend/: pyproject.toml  run.py
flask-backend/flask_backend/: __init__.py  app.py
flask-backend/flask_backend/models/: user.py
flask-backend/flask_backend/routes/: routes.py
flask-backend/flask_backend/utils/: auth.py
next-frontend/: package-lock.json  package.json  tsconfig.json
next-frontend/src/app/: layout.tsx  page.tsx
next-frontend/src/app/dashboard/: page.js
next-frontend/src/app/dashboard/components/: ChatRoom.js  Navbar.js  ProjectBoard.js  Sidebar.js  Whiteboard.js
next-frontend/src/app/login/: page.js
next-frontend/src/app/register/: page.js
next-frontend/src/components/: ProviderLayout.js
next-frontend/src/store/: store.js
next-frontend/src/utils/: AuthGuard.js  api.js
react-frontend/: README.md  package-lock.json  package.json
react-frontend/src/: App.tsx  main.tsx
react-frontend/src/components/: EditProjectForm.tsx  ProtectedRoute.tsx
react-frontend/src/context/: AuthContext.tsx
react-frontend/src/pages/: Dashboard.css  Dashboard.tsx  ProjectDetails.tsx
react-frontend/src/pages/auth/: Login.tsx  Register.tsx
react-frontend/src/services/: projectService.tsx
