[tool.poetry]
name = "flask-backend"
version = "0.1.0"
description = ""
authors = ["Siddharth Mishra <mishra07.siddharth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.20"
flask = "^3.1.0"
flask-socketio = "^5.4.1"
flask-jwt-extended = "^4.6.0"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^5.0.0"
werkzeug = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
