[tool.poetry]
name = "flask-backend"
version = "0.1.0"
description = ""
authors = ["Siddharth Mishra <mishra07.siddharth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-cors = "^5.0.0"
flask-jwt-extended = "^4.7.1"
flask-socketio = "^5.4.1"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
redis = "^5.2.0"
pymongo = "^4.10.1"
flask-restful = "^0.3.10"
flask-sqlalchemy = "^3.1.1"
flask-bcrypt = "^1.0.1"
python-dotenv = "^1.0.1"
flask-pymongo = "^2.3.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
